moved the create project to its own tab, also manually marked for Lint Ignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ dependencies = [
     "PySide6",
     "SQLAlchemy>=2.0,<3.0",
     "configparser",
-    "pre-commit"
+    "pre-commit",
+    "pyqtdarktheme"
 
 ]
 requires-python = ">=3.12"
