--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ dependencies = [
     "SQLAlchemy>=2.0,<3.0",
     "configparser",
     "pre-commit",
-    "pyqtdarktheme"
+    "pyqtdarktheme",
+    "qtsass",
+    "qt-material"
 
 ]
 requires-python = ">=3.12"
